--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "migrate:new": "node-pg-migrate create -m database/migrations",
+    "migrate:up": "node-pg-migrate up -m database/migrations",
+    "migrate:down": "node-pg-migrate down -m database/migrations",
+    "migrate:reset": "node-pg-migrate reset -m database/migrationss"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
@@ -43,11 +47,13 @@
     "clsx": "^2.1.1",
     "cmdk": "latest",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.0",
     "embla-carousel-react": "latest",
     "input-otp": "latest",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-pg-migrate": "^8.0.3",
     "react": "^19",
     "react-day-picker": "latest",
     "react-dom": "^19",
